# cicada

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .mcp.json.example  <MagicMock name='get_index_path()' id='4448399920'>  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  INSTALLATION.md  MANIFEST.in  MCP_TOOLS_REFERENCE.md  MONOREPO_SPLIT.md  Makefile  OBJECTIVE.md  OBJECTIVE_MERGE.md  PUBLISHING.md  README.md  RELEASE.md  SPLIT_PLAN.md  TESTING.md  TODO.md  TYPESCRIPT_FORMATTER_TESTS.md  TYPESCRIPT_IMPLEMENTATION_SUMMARY.md  WEEKEND_MVP_PLAN.md  codebook.yml  codecov.yml  config.yaml  config.yaml.example  demo_glove_keyword_expansion.py  indexer.py  install.sh  mcp_server.py  parser.py  pyproject.toml  pyrightconfig.json  requirements.txt  (+7 more)
.cicada/: index.json
.claude/: mcp.json
.code-tandem/: config.json
.codex/: mcp.json
.github/workflows/: claude-code-review.yml  claude.yml  codex-auto-review.yml  publish-pypi.yml  test-scip-languages.yml  test.yml  update-latest-tag.yml
agents/: git-history.md  indexing-features.md  python-support.md  release-process.md  search-syntax.md  storage-and-config.md
cicada/: __init__.py  _version_hash.py  ascii_art.py  clean.py  cli.py  cli_mapper.py  command_logger.py  commands.py  cooccurrence.py  dead_code_analyzer.py  dependency_analyzer.py  find_dead_code.py  formatter.py  git_helper.py  indexer.py  install.py  interactive_setup.py  interactive_setup_helpers.py  keybert_extractor.py  keyword_expander.py  keyword_extractor.py  keyword_search.py  keyword_test.py  lightweight_keyword_extractor.py  mcp_entry.py  mcp_server.py  mcp_tools.py  parallel_expander.py  parser.py  pr_finder.py  pr_indexer.py  rest_server.py  scoring.py  setup.py  status.py  tier.py  version_check.py  watch_manager.py  watcher.py
cicada/dead_code/: analyzer.py  finder.py
cicada/embeddings/: __init__.py
cicada/extractors/: __init__.py  base.py  call.py  dependency.py  doc.py  function.py  keybert.py  keyword.py  module.py  rust_signature.py  spec.py
cicada/format/: formatter.py
cicada/git/: cochange_analyzer.py  formatter.py  history_analyzer.py
cicada/languages/: __init__.py  formatter_interface.py  formatter_registry.py
cicada/mcp/: entry.py  fallbacks.py  router.py  server.py  tools.py
cicada/parsing/: base_indexer.py  language_config.py  schema.py
cicada/pr_indexer/: cli.py  github_api_client.py  indexer.py  pr_index_builder.py
cicada/query/: context_extractor.py  orchestrator.py  types.py
cicada/utils/: __init__.py  gitignore.py  hash_utils.py  index_lookup.py  index_utils.py  keyword_utils.py  path_utils.py  signature_builder.py  storage.py  text_utils.py
codebook/: AI_AGENTS.md  ARCHITECTURE.md  AST_INDEXING.md  AUTOMATIC_LANGUAGE_DETECTION.md  CODE_ANALYSIS.md  GIT_HISTORY.md  INSTALLATION.md  KEYWORD_INDEXING.md  LANGUAGE_SUPPORT.md  MCP_TOOLS.md  PERFORMANCE.md  README.md  WORKFLOWS.md
codebook/RandD/: 202511052055-BUNDLING_RESEARCH.md  202511052055-MCP_TOOL_CALL_BENCHMARKING.md  202511221559-SCIP_REUSABILITY_ANALYSIS.md  202512251907-MANUAL_TEST_PLAN.md  202512251907-TOKEN_OPTIMIZATION.md
codebook/tasks/: 202511052055-EXTENDED_GIT_HISTORY.md  202511192143-PR_INDEXING.md  202511262358-PDR_SCIP_TREESITTER_CHOICE.md  202512242110-CICADA_AGENT.md  202512242110-WORKFLOW_EXAMPLES.md  202512251907-CLI_MIGRATION.md  202512251907-INCREMENTAL_INDEXING.md  202512251907-PDR_CLI_REDESIGN_PR_INDEXING.md  202512291325-AST_INDEXING_REVIEW.md  202512291345-INCREMENTAL_INDEXING.md  202512291351-AUTOMATIC_LANGUAGE_DETECTION.md  202512291408-STRINGBASED_INDEXING.md  202512291436-KEYWORD_SEARCH.md  202512291451-KEYWORDBASED_INDEXING.md  202512291506-LANGUAGE_SUPPORT.md  202512291546-CODE_ANALYSIS.md  202512291601-GIT_HISTORY_PR_INDEXING_DOCUMENTATION.md  202512291618-MCP_TOOLS_DOCUMENTATION.md  202512291848-CLI_TOOLS.md  202512311328-AI_AGENTS_INTEGRATION.md
docs/: 01-KEYWORD_EXTRACTION_ANALYSIS.md  02-BERT_KEYWORD_EXTRACTOR.md  04-CI_COMPATIBILITY_ANALYSIS.md  05-MODEL_CHANGE_DETECTION.md  06-FEATURE_MODEL_TRACKING.md  07-SIMPLIFIED_SETUP_WORKFLOW.md  08-INCREMENTAL_INDEXING.md  09-PR_INDEXING.md  11-CLI_MIGRATION.md  12-TOOL_DISCOVERABILITY_TASKS.md  13-MULTI_EDITOR_TEST_SCENARIOS.md  14-MULTI_EDITOR_TEST_COVERAGE.md  15-MANUAL_TEST_PLAN.md  16-MCP_TOOL_CALL_BENCHMARKING.md  17-WORKFLOW_EXAMPLES.md  18-MCP_TOOLS_REFERENCE.md  20-PYTHON_MCP_TOOL_COMPATIBILITY.md  22-CICADA_AGENT.md  22-PARALLEL_KEYWORD_EXPANSION.md  23-TOKEN_OPTIMIZATION.md  BERT_KEYWORD_EXTRACTOR.md  BUNDLING_RESEARCH.md  CI_COMPATIBILITY_ANALYSIS.md  CLI_MIGRATION.md  EXTENDED_GIT_HISTORY.md  FEATURE_MODEL_TRACKING.md  INCREMENTAL_INDEXING.md  MANUAL_TEST_PLAN.md  MCP_TOOLS_REFERENCE.md  MCP_TOOL_CALL_BENCHMARKING.md  MODEL_CHANGE_DETECTION.md  MULTI_EDITOR_TEST_SCENARIOS.md  PR_INDEXING.md  README_UV.md  SIMPLIFIED_SETUP_WORKFLOW.md  WEEKEND_MVP_PLAN.md  prd-erlang.md  v0.md
extensions/: MVP.md  PYPI.md
extensions/claude-code/: CLAUDE_CODE.md  INSTALL.md
extensions/cursor/: CURSOR.md  INSTALL.md
scripts/: check_dead_links.py  fix_task_links.py
test_fixtures/: sample.ex
tests/: conftest.py  setup_fixtures.sh  test_acceptance.py  test_ascii_art.py  test_base_indexer.py  test_blame_cache_fix.py  test_call_sites.py  test_clean.py  test_cli.py  test_cli_mapper.py  test_command_logger.py  test_commands.py  test_cooccurrence.py  test_dead_code_analyzer.py  test_dependency_analysis.py  test_dunder_method_search.py  test_e2e.py  test_find_dead_code.py  test_formatter.py  test_git_extended_history.py  test_git_helper.py  test_github_api_client.py  test_hash_utils.py  test_index_utils.py  test_indexer_comprehensive.py  test_indexer_dependencies.py  test_install_comprehensive.py  test_install_detection.py  test_intelligent_mcp_config.py  test_interactive_setup.py  test_keybert_extractor.py  test_keyword_search.py  test_language_registry.py  test_lightweight_keyword_extractor.py  test_line_mapper.py  test_mcp_dependency_tools.py  test_mcp_e2e.py  test_mcp_git_integration.py  test_mcp_logging_integration.py  test_mcp_pr_tools.py  (+33 more)
(+264 files in other folders)
