[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cicada"
version = "0.1.2"
description = "An Elixir module search MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-elixir>=0.1.0",
    "gitpython>=3.1.0",
    "spacy>=3.8.7",
    "rank-bm25>=0.2.2",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
cicada-server = "cicada.mcp_server:main"
cicada = "cicada.setup:main"
cicada-install = "cicada.install:main"
cicada-clean = "cicada.clean:main"
cicada-index = "cicada.indexer:main"
cicada-index-pr = "cicada.pr_indexer:main"
cicada-find-dead-code = "cicada.find_dead_code:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "pyrefly>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["cicada*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Importing 'parser.split_arg_string' is deprecated.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["cicada"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.basedpyright]
pythonVersion = "3.10"
include = ["cicada", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
ignore = []
strict = []
reportMissingImports = false
reportMissingTypeStubs = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false
reportUnnecessaryContains = false
reportImplicitStringConcatenation = false
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = true
reportWildcardImportFromLibrary = true
reportAbstractUsage = true
reportUnsupportedDunderAll = true
reportUnusedCoroutine = "warning"
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true
reportUninitializedInstanceVariable = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportPossiblyUnboundVariable = true
reportSelfClsParameterName = true
reportUnusedCallResult = false
reportUnusedExpression = true
reportUnusedParameter = true
reportAny = false
reportExplicitAny = false
reportUnannotatedClassAttribute = false
reportMissingTypeArgument = false
reportArgumentType = false
reportAssignmentType = false
reportIndexIssue = false
reportOperatorIssue = false
reportAttributeAccessIssue = false
reportUnknownLambdaType = false
reportDeprecated = false
reportReturnType = false
reportPrivateUsage = false

[dependency-groups]
dev = [
    "pyrefly>=0.39.1",
]
